packages/naga/native/include/naga_native.h

// naga_native - FFI bindings for naga validation and translation
// AUTO-GENERATED by cbindgen - DO NOT EDIT


#ifndef NAGA_NATIVE_H
#define NAGA_NATIVE_H

#include <stdint.h>
#include <stdbool.h>

/**
 * A single validation error.
 */
typedef struct NagaError {
  /**
   * Error message (null-terminated UTF-8)
   */
  char *message;
  /**
   * Byte offset into source (-1 if not available)
   */
  int32_t offset;
  /**
   * Length of error span (-1 if not available)
   */
  int32_t length;
} NagaError;

/**
 * Result of WGSL validation.
 */
typedef struct NagaValidationResult {
  /**
   * Number of errors (0 = valid)
   */
  uint32_t error_count;
  /**
   * Pointer to array of NagaError (null if error_count == 0)
   */
  struct NagaError *errors;
} NagaValidationResult;

/**
 * A GLSL preprocessor definition.
 */
typedef struct NagaGlslDefine {
  /**
   * Definition name.
   */
  const char *name;
  /**
   * Definition name byte length.
   */
  int32_t name_len;
  /**
   * Definition value.
   */
  const char *value;
  /**
   * Definition value byte length.
   */
  int32_t value_len;
} NagaGlslDefine;

/**
 * Result of shader translation.
 */
typedef struct NagaTranslationResult {
  /**
   * 0 = success, 1 = failure
   */
  uint32_t status;
  /**
   * 0 = none, 1 = UTF-8 text, 2 = SPIR-V words
   */
  uint32_t output_kind;
  /**
   * Text output pointer. Null unless output_kind == 1.
   */
  char *output_text;
  /**
   * SPIR-V output pointer. Null unless output_kind == 2.
   */
  uint32_t *output_words;
  /**
   * Number of SPIR-V words.
   */
  uint32_t output_word_count;
  /**
   * Number of diagnostics.
   */
  uint32_t diagnostic_count;
  /**
   * Pointer to array of NagaError.
   */
  struct NagaError *diagnostics;
} NagaTranslationResult;

/**
 * Validate WGSL source code.
 *
 * Returns a NagaValidationResult with error_count=0 if valid,
 * or error_count>0 with error details if invalid.
 *
 * The caller must call naga_free_validation_result() to free the result.
 */
 struct NagaValidationResult naga_validate_wgsl(const char *source, int32_t source_len) ;

/**
 * Validate shader source code.
 *
 * source_format: 0 = WGSL, 1 = GLSL, 2 = SPIR-V.
 * glsl_stage is required for GLSL sources: 0 = vertex, 1 = fragment, 2 = compute.
 */

struct NagaValidationResult naga_validate(const char *text_source,
                                          int32_t text_source_len,
                                          const uint32_t *spirv_words,
                                          int32_t spirv_word_count,
                                          int32_t source_format,
                                          int32_t glsl_stage,
                                          const struct NagaGlslDefine *glsl_defines,
                                          int32_t glsl_define_count)
;

/**
 * Translate shader source code.
 *
 * source_format: 0 = WGSL, 1 = GLSL, 2 = SPIR-V.
 * target_format: 0 = WGSL, 1 = SPIR-V, 2 = MSL, 3 = HLSL, 4 = GLSL.
 * target_option_flags is interpreted by target_format.
 * target_option_value is interpreted by target_format.
 * entry_stage: -1 = no entry point, 0 = vertex, 1 = fragment, 2 = compute.
 */

struct NagaTranslationResult naga_translate(const char *text_source,
                                            int32_t text_source_len,
                                            const uint32_t *spirv_words,
                                            int32_t spirv_word_count,
                                            int32_t source_format,
                                            int32_t glsl_stage,
                                            int32_t target_format,
                                            uint32_t target_option_flags,
                                            int32_t target_option_value,
                                            int32_t entry_stage,
                                            const char *entry_name,
                                            int32_t entry_name_len,
                                            const struct NagaGlslDefine *glsl_defines,
                                            int32_t glsl_define_count)
;

/**
 * Free a validation result returned by naga_validate_wgsl.
 */
 void naga_free_validation_result(struct NagaValidationResult result) ;

/**
 * Free a translation result returned by naga_translate.
 */
 void naga_free_translation_result(struct NagaTranslationResult result) ;

#endif  /* NAGA_NATIVE_H */