packages/naga/lib/src/bindings/bindings_generated.dart

// AUTO-GENERATED by ffigen - DO NOT EDIT
// Run `./gen_bindings.sh` to regenerate
//
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:naga/naga_native')
library;

import 'dart:ffi' as ffi;

/// Validate WGSL source code.
///
/// Returns a NagaValidationResult with error_count=0 if valid,
/// or error_count>0 with error details if invalid.
///
/// The caller must call naga_free_validation_result() to free the result.
@ffi.Native<NagaValidationResult Function(ffi.Pointer<ffi.Char>, ffi.Int32)>()
external NagaValidationResult naga_validate_wgsl(
  ffi.Pointer<ffi.Char> source,
  int source_len,
);

/// Validate shader source code.
///
/// source_format: 0 = WGSL, 1 = GLSL, 2 = SPIR-V.
/// glsl_stage is required for GLSL sources: 0 = vertex, 1 = fragment, 2 = compute.
@ffi.Native<
  NagaValidationResult Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Pointer<ffi.Uint32>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<NagaGlslDefine>,
    ffi.Int32,
  )
>()
external NagaValidationResult naga_validate(
  ffi.Pointer<ffi.Char> text_source,
  int text_source_len,
  ffi.Pointer<ffi.Uint32> spirv_words,
  int spirv_word_count,
  int source_format,
  int glsl_stage,
  ffi.Pointer<NagaGlslDefine> glsl_defines,
  int glsl_define_count,
);

/// Translate shader source code.
///
/// source_format: 0 = WGSL, 1 = GLSL, 2 = SPIR-V.
/// target_format: 0 = WGSL, 1 = SPIR-V, 2 = MSL, 3 = HLSL, 4 = GLSL.
/// target_option_flags is interpreted by target_format.
/// target_option_value is interpreted by target_format.
/// entry_stage: -1 = no entry point, 0 = vertex, 1 = fragment, 2 = compute.
@ffi.Native<
  NagaTranslationResult Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Pointer<ffi.Uint32>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Uint32,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Pointer<NagaGlslDefine>,
    ffi.Int32,
  )
>()
external NagaTranslationResult naga_translate(
  ffi.Pointer<ffi.Char> text_source,
  int text_source_len,
  ffi.Pointer<ffi.Uint32> spirv_words,
  int spirv_word_count,
  int source_format,
  int glsl_stage,
  int target_format,
  int target_option_flags,
  int target_option_value,
  int entry_stage,
  ffi.Pointer<ffi.Char> entry_name,
  int entry_name_len,
  ffi.Pointer<NagaGlslDefine> glsl_defines,
  int glsl_define_count,
);

/// Free a validation result returned by naga_validate_wgsl.
@ffi.Native<ffi.Void Function(NagaValidationResult)>()
external void naga_free_validation_result(
  NagaValidationResult result,
);

/// Free a translation result returned by naga_translate.
@ffi.Native<ffi.Void Function(NagaTranslationResult)>()
external void naga_free_translation_result(
  NagaTranslationResult result,
);

/// A single validation error.
final class NagaError extends ffi.Struct {
  /// Error message (null-terminated UTF-8)
  external ffi.Pointer<ffi.Char> message;

  /// Byte offset into source (-1 if not available)
  @ffi.Int32()
  external int offset;

  /// Length of error span (-1 if not available)
  @ffi.Int32()
  external int length;
}

/// Result of WGSL validation.
final class NagaValidationResult extends ffi.Struct {
  /// Number of errors (0 = valid)
  @ffi.Uint32()
  external int error_count;

  /// Pointer to array of NagaError (null if error_count == 0)
  external ffi.Pointer<NagaError> errors;
}

/// A GLSL preprocessor definition.
final class NagaGlslDefine extends ffi.Struct {
  /// Definition name.
  external ffi.Pointer<ffi.Char> name;

  /// Definition name byte length.
  @ffi.Int32()
  external int name_len;

  /// Definition value.
  external ffi.Pointer<ffi.Char> value;

  /// Definition value byte length.
  @ffi.Int32()
  external int value_len;
}

/// Result of shader translation.
final class NagaTranslationResult extends ffi.Struct {
  /// 0 = success, 1 = failure
  @ffi.Uint32()
  external int status;

  /// 0 = none, 1 = UTF-8 text, 2 = SPIR-V words
  @ffi.Uint32()
  external int output_kind;

  /// Text output pointer. Null unless output_kind == 1.
  external ffi.Pointer<ffi.Char> output_text;

  /// SPIR-V output pointer. Null unless output_kind == 2.
  external ffi.Pointer<ffi.Uint32> output_words;

  /// Number of SPIR-V words.
  @ffi.Uint32()
  external int output_word_count;

  /// Number of diagnostics.
  @ffi.Uint32()
  external int diagnostic_count;

  /// Pointer to array of NagaError.
  external ffi.Pointer<NagaError> diagnostics;
}
